<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:theme="@style/CardView.Dark"
    card_view:cardElevation="2sp"
    android:layout_margin="2dp">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dateTimeTextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/last_update"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:textSize="8sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No data"
                style="@style/textSmallStyle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionTextView"
                style="@style/textSmallestStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/windTextView"
                style="@style/textSmallestStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/wind_default" />

            <TextView
                android:id="@+id/pressureTextView"
                style="@style/textSmallestStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure_default" />

            <TextView
                android:id="@+id/humidityTextView"
                style="@style/textSmallestStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/humidity_default" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/weatherTemperatureContainer"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/img_01d"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/temperatureTextView"
                style="@style/textSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_default"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/iconImageView" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>