<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:theme="@style/CardView.Light"
    card_view:cardElevation="2sp"
    android:layout_margin="2dp">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            style="@style/textSmallestStyle"
            android:text="@string/city_country"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cityCountryTextView"
            style="@style/textSmallestStyle"
            android:text="@string/no_data"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textSmallestStyle"
            android:text="@string/latitude_longitude"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/coordinatesTextView"
            style="@style/textSmallestStyle"
            android:text="@string/no_data"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v7.widget.CardView>