<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.WeatherForecastActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/successContainer"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                style="@style/textLargeStyle" />

            <TextView
                android:id="@+id/dateTextView"
                android:text="@string/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cityTextView"
                android:layout_centerHorizontal="true"
                style="@style/textSmallestStyle" />

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:id="@+id/middleContainer"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/iconImageView">

                <TextView
                    android:id="@+id/descriptionTextView"
                    style="@style/textSmallestStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/windTextView"
                    style="@style/textSmallestStyle"
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_default"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/humidityTextView"
                    style="@style/textSmallestStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_default"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/pressureTextView"
                    style="@style/textSmallestStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_default"
                    android:textAlignment="center" />

            </LinearLayout>

            <TextView
                android:id="@+id/temperatureTextView"
                style="@style/textSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/middleContainer"
                android:layout_centerHorizontal="true"
                android:paddingTop="6dp"
                android:paddingBottom="8dp"
                android:text="@string/min_max_temperatures" />

        </RelativeLayout>

        <GridView
            android:id="@+id/weatherForecastGridView"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:numColumns="5"
            android:verticalSpacing="5dp"
            android:horizontalSpacing="5dp"
            android:stretchMode="columnWidth" />

    </LinearLayout>

    <include layout="@layout/include_error_container" />

    <include layout="@layout/include_empty_container" />

    <include layout="@layout/include_loading_container" />

</LinearLayout>